--- a/css/styles.scss
+++ b/css/styles.scss
@@ -232,7 +232,8 @@ h2, h3, .button{
 	display: table;
 }
 
-.process:first{
+.process p:nth-child(2){
+	padding-bottom: 20px;
 
 }
 .processphoto{
